added some of the logic for upcoming events for the week

--- a/event_email_template.html
+++ b/event_email_template.html
@@ -21,9 +21,7 @@
                                         <div style="font-family:Arial,Helvetica,sans-serif;font-size:16px;line-height:1;text-align:left;color:#000000">
                                           <p style="line-height:22px">Events for {timescale_info}:</p>
                                           <ul>
-                                            <li>
-                                              <a href="https://www.redmountainmakers.org/EmailTracker/LinkTracker.ashx?linkAndRecipientCode=yQ%2bH90nFmBZjRXu2jbIGjdoh2MJDIZ%2bTc1tOjFjpF5283qs%2f1V7ukbDPVVKY%2flluV7elQ09UhrPy4%2f9JSffSLap6lmkuP4jU0BH8SRn8HQo%3d" target="_blank" data-saferedirecturl="https://www.google.com/url?hl=en&amp;q=https://www.redmountainmakers.org/EmailTracker/LinkTracker.ashx?linkAndRecipientCode%3DyQ%252bH90nFmBZjRXu2jbIGjdoh2MJDIZ%252bTc1tOjFjpF5283qs%252f1V7ukbDPVVKY%252flluV7elQ09UhrPy4%252f9JSffSLap6lmkuP4jU0BH8SRn8HQo%253d&amp;source=gmail&amp;ust=1684558318957000&amp;usg=AOvVaw3yTW9AsYheuvqFIjINEOhm">Test event 1</a>
-                                            </li>
+                                            {event_list}
                                           </ul>
                                           <p>
                                             <br>
