changed HTML formatting and template

--- a/event_email_template.html
+++ b/event_email_template.html
@@ -1,89 +1,185 @@
-<font size=-1>
-  <div>
-    <div>
-      <table background="https://ci5.googleusercontent.com/proxy/IeMWpRB9IF2qOeVq0_8uunyclFFqUMWmSth9ux5FKAogpd2RRU4aZ4tmc2n5CI7R2nF2WtjiE1s=s0-d-e1-ft#https://www.redmountainmakers.orgnone" bgcolor="transparent" align="center" border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" style="background-image:none;background-color:transparent;background-position:50% 0%;background-repeat:repeat">
-        <tbody>
-          <tr>
-            <td align="center" valign="top">
-              <div style="background:#f5f5f5;background-color:#f5f5f5;margin:0px auto;max-width:600px">
-                <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#f5f5f5;background-color:#f5f5f5;width:100%">
-                  <tbody>
-                    <tr>
-                      <td style="direction:ltr;font-size:0px;padding:0px;text-align:center">
-                        <div class="m_7213081944420588981mj-column-px-600" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%">
-                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
-                            <tbody>
-                              <tr>
-                                <td style="background-color:transparent;border-bottom:0px none #000000;border-left:0px none #000000;border-right:0px none #000000;border-top:0px none #000000;vertical-align:top;padding:0px;padding-top:40px;padding-right:40px;padding-bottom:60px;padding-left:40px">
-                                  <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
-                                    <tr>
-                                      <td align="left" style="background:#ffffff;font-size:0px;padding:0px;word-break:break-word">
-                                        <div style="font-family:Arial,Helvetica,sans-serif;font-size:16px;line-height:1;text-align:left;color:#000000">
-                                          <p style="line-height:22px">Events for {timescale_info}:</p>
-                                          <ul>
-                                            {event_list}
-                                          </ul>
-                                          <p>
-                                            <br>
-                                          </p>
-                                        </div>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td align="center" style="background:transparent;font-size:0px;padding:0px;word-break:break-word">
-                                        <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px">
-                                          <tbody>
-                                            <tr>
-                                              <td style="width:200px">
-                                                <img height="auto" src="https://ci4.googleusercontent.com/proxy/CjS58gdf0rOTiqcOukVrFh8dkCzdadlHpPY__M7d_5ZWLBNFoUeYK6fahCHwin35kM_V8IxxuQpUhiR8d1LKdtEvUIHdP7T2KTFA016pux9g_lkkRXIz5Hr6FAw2cEoCkVv1yjAfsOrtqwOgJOCT=s0-d-e1-ft#https://www.redmountainmakers.org/resources/Pictures/Logos%20and%20Posters/rmm_logo_2023.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:16px" width="400">
-                                              </td>
-                                            </tr>
-                                          </tbody>
-                                        </table>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td align="left" style="background:transparent;font-size:0px;padding:0px;word-break:break-word">
-                                        <div style="font-family:Arial,Helvetica,sans-serif;font-size:16px;line-height:1;text-align:left;color:#000000">
-                                        </div>
-                                      </td>
-                                    </tr>
-                                  </table>
-                                </td>
-                              </tr>
-                            </tbody>
-                          </table>
-                        </div>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-              <div style="margin:0px auto;max-width:600px">
-                <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%">
-                  <tbody>
-                    <tr>
-                      <td style="direction:ltr;font-size:0px;padding:0px;text-align:center">
-                        <div class="m_7213081944420588981mj-column-px-600" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%">
-                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
-                            <tbody>
-                              <tr>
-                                <td style="background-color:transparent;border-bottom:0px none #000000;border-left:0px none #000000;border-right:0px none #000000;border-top:0px none #000000;vertical-align:top;padding:0px;padding-top:20px;padding-right:20px;padding-bottom:20px;padding-left:20px">
-                                  <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%"></table>
-                                </td>
-                              </tr>
-                            </tbody>
-                          </table>
-                        </div>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-</font>
+<!DOCTYPE html>
+<html xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office" lang="en">
+
+<head>
+	<title></title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"><!--[if mso]><xml><o:OfficeDocumentSettings><o:PixelsPerInch>96</o:PixelsPerInch><o:AllowPNG/></o:OfficeDocumentSettings></xml><![endif]--><!--[if !mso]><!-->
+	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css"><!--<![endif]-->
+	<style>
+		* {
+			box-sizing: border-box;
+		}
+
+		body {
+			margin: 0;
+			padding: 0;
+		}
+
+		a[x-apple-data-detectors] {
+			color: inherit !important;
+			text-decoration: inherit !important;
+		}
+
+		#MessageViewBody a {
+			color: inherit;
+			text-decoration: none;
+		}
+
+		p {
+			line-height: inherit
+		}
+
+		.desktop_hide,
+		.desktop_hide table {
+			mso-hide: all;
+			display: none;
+			max-height: 0px;
+			overflow: hidden;
+		}
+
+		.image_block img+div {
+			display: none;
+		}
+
+		@media (max-width:670px) {
+			.desktop_hide table.icons-inner {
+				display: inline-block !important;
+			}
+
+			.icons-inner {
+				text-align: center;
+			}
+
+			.icons-inner td {
+				margin: 0 auto;
+			}
+
+			.row-content {
+				width: 100% !important;
+			}
+
+			.stack .column {
+				width: 100%;
+				display: block;
+			}
+
+			.mobile_hide {
+				max-width: 0;
+				min-height: 0;
+				max-height: 0;
+				font-size: 0;
+				display: none;
+				overflow: hidden;
+			}
+
+			.desktop_hide,
+			.desktop_hide table {
+				max-height: none !important;
+				display: table !important;
+			}
+		}
+	</style>
+</head>
+
+<body style="text-size-adjust: none; background-color: #fff; margin: 0; padding: 0;">
+	<table class="nl-container" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #fff;">
+		<tbody>
+			<tr>
+				<td>
+					<table class="row row-1" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #110f0f;">
+						<tbody>
+							<tr>
+								<td>
+									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; color: #000; width: 650px; margin: 0 auto;" width="650">
+										<tbody>
+											<tr>
+												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; text-align: left; font-weight: 400; padding-bottom: 5px; padding-top: 5px; vertical-align: top; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
+													<table class="divider_block block-1" width="100%" border="0" cellpadding="15" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+														<tr>
+															<td class="pad">
+																<div class="alignment" align="center">
+																	<table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+																		<tr>
+																			<td class="divider_inner" style="font-size: 1px; line-height: 1px; border-top: 0px solid #BBBBBB;"><span>&#8202;</span></td>
+																		</tr>
+																	</table>
+																</div>
+															</td>
+														</tr>
+													</table>
+												</td>
+											</tr>
+										</tbody>
+									</table>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+					<table class="row row-2" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #110f0f;">
+						<tbody>
+							<tr>
+								<td>
+									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; color: #000; background-color: #000; width: 650px; margin: 0 auto;" width="650">
+										<tbody>
+											<tr>
+												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; text-align: left; font-weight: 400; padding-bottom: 30px; padding-top: 30px; vertical-align: top; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
+													<table class="heading_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+														<tr>
+															<td class="pad" style="padding-left:45px;padding-right:45px;padding-top:10px;text-align:center;width:100%;">
+																<h1 style="margin: 0; color: #ffffff; direction: ltr; font-family: 'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif; font-size: 37px; font-weight: normal; letter-spacing: -2px; line-height: 120%; text-align: left; margin-top: 0; margin-bottom: 0;"><strong>Events for {timescale_info}</strong></h1>
+															</td>
+														</tr>
+													</table>
+													{event_list}
+													<table class="divider_block block-4" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+														<tr>
+															<td class="pad">
+																<div class="alignment" align="center">
+																	<table border="0" cellpadding="0" cellspacing="0" role="presentation" width="90%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+																		<tr>
+																			<td class="divider_inner" style="font-size: 1px; line-height: 1px; border-top: 1px dotted #F2103B;"><span>&#8202;</span></td>
+																		</tr>
+																	</table>
+																</div>
+															</td>
+														</tr>
+													</table>
+												</td>
+											</tr>
+										</tbody>
+									</table>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+					<table class="row row-3" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #110f0f;">
+						<tbody>
+							<tr>
+								<td>
+									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; color: #000; background-color: #f2103b; width: 650px; margin: 0 auto;" width="650">
+										<tbody>
+											<tr>
+												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; text-align: left; font-weight: 400; padding-bottom: 5px; padding-top: 5px; vertical-align: top; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
+													<table class="image_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+														<tr>
+															<td class="pad" style="width:100%;">
+																<div class="alignment" align="center" style="line-height:10px"><a href="http://www.example.com" target="_blank" style="outline:none" tabindex="-1"><img src="https://d1oco4z2z1fhwp.cloudfront.net/templates/default/3771/yourlogo-black.png" style="height: auto; display: block; border: 0; max-width: 98px; width: 100%;" width="98" alt="Your Logo Juneteenth" title="Your Logo Juneteenth"></a></div>
+															</td>
+														</tr>
+													</table>
+												</td>
+											</tr>
+										</tbody>
+									</table>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</td>
+			</tr>
+		</tbody>
+	</table><!-- End -->
+</body>
+
+</html>
