added additional curly braces

--- a/event_email_template.html
+++ b/event_email_template.html
@@ -7,78 +7,78 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"><!--[if mso]><xml><o:OfficeDocumentSettings><o:PixelsPerInch>96</o:PixelsPerInch><o:AllowPNG/></o:OfficeDocumentSettings></xml><![endif]--><!--[if !mso]><!-->
 	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css"><!--<![endif]-->
 	<style>
-		* {
+		* {{
 			box-sizing: border-box;
-		}
+		}}
 
-		body {
+		body {{
 			margin: 0;
 			padding: 0;
-		}
+		}}
 
-		a[x-apple-data-detectors] {
+		a[x-apple-data-detectors] {{
 			color: inherit !important;
 			text-decoration: inherit !important;
-		}
+		}}
 
-		#MessageViewBody a {
+		#MessageViewBody a {{
 			color: inherit;
 			text-decoration: none;
-		}
+		}}
 
-		p {
+		p {{
 			line-height: inherit
-		}
+		}}
 
 		.desktop_hide,
-		.desktop_hide table {
+		.desktop_hide table {{
 			mso-hide: all;
 			display: none;
 			max-height: 0px;
 			overflow: hidden;
-		}
+		}}
 
-		.image_block img+div {
+		.image_block img+div {{
 			display: none;
-		}
+		}}
 
-		@media (max-width:670px) {
-			.desktop_hide table.icons-inner {
+		@media (max-width:670px) {{
+			.desktop_hide table.icons-inner {{
 				display: inline-block !important;
-			}
+			}}
 
-			.icons-inner {
+			.icons-inner {{
 				text-align: center;
-			}
+			}}
 
-			.icons-inner td {
+			.icons-inner td {{
 				margin: 0 auto;
-			}
+			}}
 
-			.row-content {
+			.row-content {{
 				width: 100% !important;
-			}
+			}}
 
-			.stack .column {
+			.stack .column {{
 				width: 100%;
 				display: block;
-			}
+			}}
 
-			.mobile_hide {
+			.mobile_hide {{
 				max-width: 0;
 				min-height: 0;
 				max-height: 0;
 				font-size: 0;
 				display: none;
 				overflow: hidden;
-			}
+			}}
 
 			.desktop_hide,
-			.desktop_hide table {
+			.desktop_hide table {{
 				max-height: none !important;
 				display: table !important;
-			}
-		}
+			}}
+		}}
 	</style>
 </head>
 
