--- a/event_email_template.html
+++ b/event_email_template.html
@@ -127,7 +127,7 @@
 													<table class="heading_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 														<tr>
 															<td class="pad" style="padding-left:45px;padding-right:45px;padding-top:10px;text-align:center;width:100%;">
-																<h1 style="margin: 0; color: #ffffff; direction: ltr; font-family: 'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif; font-size: 37px; font-weight: normal; letter-spacing: -2px; line-height: 120%; text-align: left; margin-top: 0; margin-bottom: 0;"><strong>Events for {timescale_info}</strong></h1>
+																<h1 style="margin: 0; color: #ffffff; direction: ltr; font-family: 'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif; font-size: 22px; font-weight: normal; letter-spacing: -2px; line-height: 120%; text-align: left; margin-top: 0; margin-bottom: 0;"><strong>Events for {timescale_info}</strong></h1>
 															</td>
 														</tr>
 													</table>
@@ -164,7 +164,7 @@
 													<table class="image_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 														<tr>
 															<td class="pad" style="width:100%;">
-																<div class="alignment" align="center" style="line-height:10px"><a href="http://www.example.com" target="_blank" style="outline:none" tabindex="-1"><img src="https://d1oco4z2z1fhwp.cloudfront.net/templates/default/3771/yourlogo-black.png" style="height: auto; display: block; border: 0; max-width: 98px; width: 100%;" width="98" alt="Your Logo Juneteenth" title="Your Logo Juneteenth"></a></div>
+																<div class="alignment" align="center" style="line-height:10px"><a href="http://www.redmountainmakers.org" target="_blank" style="outline:none" tabindex="-1"><img src="https://redmountainmakers.org/resources/Pictures/Logos%20and%20Posters/rmm_logo_2023.png" style="height: auto; display: block; border: 0; max-width: 98px; width: 100%;" width="98" alt="RMM Logo" title="RMM Logo"></a></div>
 															</td>
 														</tr>
 													</table>
