change link color

--- a/event_email_template.html
+++ b/event_email_template.html
@@ -17,7 +17,7 @@
 		}}
 
 		a[x-apple-data-detectors] {{
-			color: inherit !important;
+			color: red !important;
 			text-decoration: inherit !important;
 		}}
 
@@ -157,7 +157,7 @@
 						<tbody>
 							<tr>
 								<td>
-									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; color: #000; background-color: #f2103b; width: 650px; margin: 0 auto;" width="650">
+									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; color: #ffffff; background-color: #110f0f; width: 650px; margin: 0 auto;" width="650">
 										<tbody>
 											<tr>
 												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; text-align: left; font-weight: 400; padding-bottom: 5px; padding-top: 5px; vertical-align: top; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
